--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,36 @@
 	<string name="menu_refresh">Refresh</string>
     <string name="menu_location">Location</string>
     <string name="menu_settings">Settings</string>
+
+    <string name="search_hint">Search Hint</string>
+
+    <string-array name="countries_array">
+        <!--  item>Afghanistan</item>
+        <item>Albania</item>
+        <item>Algeria</item>
+        <item>American Samoa</item>
+        <item>Andorra</item>
+        <item>Angola</item>
+        <item>Anguilla</item>
+        <item>Antarctica</item-->
+<item>Quinta Essência</item>
+<item>Antena 2 Ciência</item>
+<item>Semibreve</item>
+<item>A Vida Breve</item>
+<item>Última Edição</item>
+<item>PÁGINAS DE PORTUGUÊS</item>
+<item>Fora do 5</item>
+<item>O Todo Poderoso</item>
+<item>PROVA ORAL</item>
+<item>CINEMAX - SALA 3</item>
+<item>Não Digo Nomes</item>
+<item>Manhãs da 3</item>
+<item>Pontapés na Gramática</item>
+<item>Conta-me tudo, não me escondas nada!</item>
+<item>LINHA AVAN</item>
+<item>Da Missa a Metade</item>
+<item>A HORA DO SEXO</item>
+<item>Outra Coisa</item>
+<item>BUZZ</item>
+    </string-array>
 </resources>
